update msgstr ":ref:`tronweb-connector

--- a/docs/locale/zh_CN/LC_MESSAGES/index.po
+++ b/docs/locale/zh_CN/LC_MESSAGES/index.po
@@ -55,4 +55,4 @@ msgid ""
 ":ref:`tronweb-connector` connects users to tron network using `tronlink "
 "<https://www.tronlink.org/>`_ wallet extension and return `Tronweb object"
 " <https://developers.tron.network/reference/tronweb-object>`_."
-msgstr ":ref:`tronweb-connector` 使用 `tronlink <https://www.tronlink.org/>`_ 錢包擴展將用戶連接到 tron 網絡並返回 `Tronweb 物件 <https://developers.tron.network/reference/tronweb-object>`_。"
+msgstr ":ref:`tronweb-connector` 使用 `tronlink <https://www.tronlink.org/>`_ 钱包扩展将用户连接到 tron 网络并返回 `Tronweb 物件 <https://developers.tron.network/reference/tronweb-object>`_。"
